# my-llm-universe

./: .gitignore  README.md  fetch_datawhale_repo_readme.py  llm.py  llm_embedding.py  llm_evaluate.py  main.py  pyproject.toml  task5.md  zhipuai_embedding.py
knowledge_base/datawhale/readme_db/hugging-vis/: README.md
