[project]
name = "my-llm-universe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "langchain-chroma>=0.2.4",
    "langchain-community>=0.3.24",
    "langchain-google-genai>=2.1.4",
    "langchain-text-splitters>=0.3.8",
    "langchain-zhipuai-dev>=0.2.1",
    "loguru>=0.7.3",
    "markdown>=3.8",
    "pydantic>=2.11.5",
    "pymupdf>=1.26.0",
    "unstructured>=0.17.2",
    "zhipuai>=2.1.5.20250526",
]
